test/cases/pos/0156_callst.ul
fn sum int a, int b => {
  int c = a + b;
  return c;
}

sum 2, 19;
