test/cases/neg/0203_func_redecl.ul
fn sum int a, int b => {
  return a + b;
}

fn test_fun => { }

fn sum int a => {
  return a + 2;
}
